--- a/foundry.toml
+++ b/foundry.toml
@@ -4,8 +4,8 @@ out = "out"
 libs = ["lib"]
 
 [invariant]
-run = 128
+runs = 128
 depth = 128
-fail_on_revert = false
+fail_on_revert = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
